# rpa_sec

./: .gitignore  .pre-commit-config.yaml  LICENSE  MIT  pyproject.toml
src/core/: config.py
test/: test_configurations.py  test_logger.py
