[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-sec"
description = "Automações para interagir com o sistema da Secretaria de Agricultura de Feira Nova - PE"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Erik Marques", email = "lucro.alternativo@outlook.com" }]
dependencies = [
    "selenium==4.30.0",
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "webdriver-manager==4.0.2",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov==6.0.0",
  "pytest-mock==3.14.0",
  "coverage[toml]>=7.4",
  "build",
  "pre-commit==3.2.0",
  "taskipy>=0.3.0",
]

docs = [
  "mkdocs>=1.5",
  "mkdocs-material",
  "mkdocstrings[python]>=0.24",
  "markdown-include"
]

[tool.taskipy.tasks]
test = "pytest"
cov = "coverage run -m pytest && coverage report"
docs = "mkdocs serve"


[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true